Fix movie section alignment on different resolutions

--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -45,7 +45,7 @@ h1 {
 }
 
 button {
-  margin-top: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 600px) {
